applications/java-api-rema9/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-api-rema9-ingress
  namespace: java-api-rema9
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: java-api-rema9
            port:
              number: 8000
